Added init routing, templating

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,12 @@
 
   <body ng-controller="AppController">
 
+    <div ui-view="input"></div>
+
+    <div ui-view="results"></div>
+
     <script src="js/app.js"></script>
+    <script src="js/templates.js"></script>
 
   </body>
 </html>
