--- a/app/js/form/form.tpl.html
+++ b/app/js/form/form.tpl.html
@@ -1,3 +1,4 @@
 <form ng-submit="searchForTop()">
   <input type="text" placeholder="skill" ng-model="skill" />
+  <button type="submit">Submit</button>
 </form>
