--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
 
     <div ui-view="results"></div>
 
+    <p>{{results}}</p>
+
     <script src="js/app.js"></script>
     <script src="js/templates.js"></script>
 
