--- a/app/js/results/results.tpl.html
+++ b/app/js/results/results.tpl.html
@@ -1,4 +1,10 @@
 <div>Results</div>
 <ul>
-  <li ng-repeat="result in results.getResults().data">{{result.data.body}}</li>
+  <li ng-repeat="result in results.getResults().data">
+  <a ng-href="{{result.data.html_url}}">
+      <h3>Title: {{result.data.title}}</h3>
+      <h4>Url: {{result.data.url}}</h4>
+      <p>{{result.data.body}}</p>
+    </a>
+  </li>
 </ul>
