added scss structure and reset

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html ng-app="issueFinder">
   <head>
-    <link href="" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
 
   <body ng-controller="AppController">
